# Automated_financial_trading_v2

./: .gitignore  requirements.txt
ai_short_term_day_trading/: README.md  backtest_simulator.py  causal_upgrade_spec.md  chips_cache.json  clear_position.py  composite_ai.py  data_engine.py  data_pipeline.py  delta_gamma_theta.py  fetch_daily_chips.py  historical_chips_cache_v3.parquet  live_dashboard.py  live_option_simulator_v2.py  live_option_simulator_v3.py  model_manager.py  post_market_export.py  strategy_factory.py  sweep_train.py  test.parquet  test_composite_ai.py  test_delta_gamma_theta.py  test_kmp.py  test_model_manager.py  test_post_market_export.py  test_strategy_factory.py  test_train_model.py  tick_processor.py  train_model.py
ai_short_term_day_trading/data_learn/: feature_optimization_report.txt  loss_analysis_report.txt  新文字文件.txt
ai_short_term_day_trading/options_backtester/: directions.txt  ui_dashboard.py  新文字文件.txt
ai_short_term_day_trading/options_backtester/cpp_engine/: CMakeLists.txt  Purpose.txt  init_db.py
ai_short_term_day_trading/options_backtester/cpp_engine/src/: bindings.cpp  orderbook_replay.cpp  orderbook_replay.h
reports_output/post_market/: cli_trade_log_20260616_132500.jsonl  human_report_20260616_132500.md
wandb/run-20260620_152302-c9yw2s7t/: run-c9yw2s7t.wandb
wandb/run-20260620_161932-4q07kxo4/: run-4q07kxo4.wandb
wandb/run-20260620_191706-es0s32pb/: run-es0s32pb.wandb
wandb/run-20260620_194930-p7hk06vl/: run-p7hk06vl.wandb
wandb/run-20260621_152302-n465p6mj/: run-n465p6mj.wandb
(+112 files in other folders)
